--- a/popup/styles/popup.css
+++ b/popup/styles/popup.css
@@ -4,8 +4,8 @@ body {
 }
 
 img {
-  width: 35px;
-  height: 35px;
+  width: 25px;
+  height: 25px;
 }
 
 header {
@@ -13,6 +13,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  font-size: small;
 }
 
 #logo,
@@ -24,12 +25,12 @@ header {
 }
 
 #logo img,#version img{
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
 }
 
 #logo .logo-image,#version .version-index{
-  margin-right: 5px;
+  margin-right: 3px;
 }
 
 .github-icon{
