--- a/popup/styles/section-content.css
+++ b/popup/styles/section-content.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 10px;
 }
 .section-content-item {
   width: max-content;
