--- a/assets/styles/popup.css
+++ b/assets/styles/popup.css
@@ -38,14 +38,17 @@ header {
   margin-right: 3px;
 }
 
-.github-icon {
+#version {
   opacity: 0.5;
 }
 
-#error-flash {
-  color: red;
-}
 
 body:has(#ads-skipper:not(:checked)) .ads{
   display: none;
+}
+
+#error-flash ,footer .refresh-warning{
+  color: red;
+  opacity: 0.6;
+  font-size: x-small;
 }
