--- a/views/popup.html
+++ b/views/popup.html
@@ -12,7 +12,7 @@
     <header>
       <div id="logo">
         <img class="logo-image" src="../assets/images/logo.png" />
-        <span class="logo-name">YouSkip</span>
+        <span class="logo-name">YoutubeBlue</span>
       </div>
 
       <div id="version">
