--- a/views/popup.html
+++ b/views/popup.html
@@ -17,7 +17,10 @@
 
       <div id="version">
         <span class="version-index" id="version-name"></span>
-        <a class="version-link" href="https://github.com/Mr-Fougere/youSkip">
+        <a
+          class="version-link"
+          href="https://github.com/Mr-Fougere/YoutubeBlue"
+        >
           <img class="github-icon" src="../assets/images/github.png" />
         </a>
       </div>
@@ -28,7 +31,7 @@
     <div class="sections">
       <div class="section ads">
         <div class="section-title">
-          <span class="section-name">Skips Recap</span>
+          <span class="section-name">Global Recap</span>
           <div class="section-divider"></div>
         </div>
         <div class="section-content">
@@ -66,7 +69,7 @@
       </div>
       <div class="section ads">
         <div class="section-title">
-          <span class="section-name">Month Skips</span>
+          <span class="section-name">Month Recap</span>
           <div class="section-divider"></div>
         </div>
         <div class="section-content">
@@ -114,12 +117,28 @@
               Ads Skipper</label
             >
           </div>
+          <div class="section-content-action">
+            <div class="bool-switch-block">
+              <input
+                class="bool-switch__checkbox"
+                id="resolution-blur"
+                type="checkbox"
+                name="resolution-blur"
+              />
+              <label class="bool-switch__label" for="resolution-blur"></label>
+            </div>
+            <label class="section-content-action-name" for="resolution-blur">
+              Resolution Blur</label
+            >
+          </div>
         </div>
       </div>
     </div>
 
     <footer>
-      <span class="refresh-warning">Youtube tabs will be refresh on changes</span>
+      <span class="refresh-warning"
+        >Youtube tabs will be refresh on changes</span
+      >
     </footer>
     <script src="../scripts/popup.js"></script>
   </body>
