--- a/views/popup.html
+++ b/views/popup.html
@@ -110,6 +110,7 @@
                 id="ads-skipper"
                 type="checkbox"
                 name="ads-skipper"
+                data-feature = "adsSkipper"
               />
               <label class="bool-switch__label" for="ads-skipper"></label>
             </div>
@@ -124,6 +125,7 @@
                 id="resolution-blur"
                 type="checkbox"
                 name="resolution-blur"
+                data-feature = "resolutionBlur"
               />
               <label class="bool-switch__label" for="resolution-blur"></label>
             </div>
