--- a/assets/styles/popup.css
+++ b/assets/styles/popup.css
@@ -38,6 +38,15 @@ header {
   margin-right: 3px;
 }
 
+#logo {
+  font-weight: bold;
+}
+
+.logo-name-color{
+  font-size: smaller;
+  color: var(--item-text-color);
+}
+
 #version {
   opacity: 0.5;
 }
@@ -45,10 +54,6 @@ header {
 a{
   text-decoration: none;
   color: inherit;
-}
-
-body:has(#ads-skipper:not(:checked)) .ads {
-  display: none;
 }
 
 footer {
