--- a/views/popup.html
+++ b/views/popup.html
@@ -12,7 +12,7 @@
     <header>
       <div id="logo">
         <img class="logo-image" src="../assets/images/logo.png" />
-        <span class="logo-name">YoutubeBlue</span>
+        <span class="logo-name">YouTube<span class="logo-name-color" >Blue</span></span>
       </div>
 
       <div id="version">
@@ -29,7 +29,7 @@
     <p id="error-flash"></p>
 
     <div class="sections">
-      <div class="section ads">
+      <div class="section">
         <div class="section-title">
           <span class="section-name">Global Recap</span>
           <div class="section-divider"></div>
@@ -65,9 +65,19 @@
             >
             <span class="section-content-item-name">Average ads time</span>
           </div>
+          <div class="section-content-item">
+            <img
+              class="section-content-item-icon"
+              src="../assets/images/data.png"
+            />
+            <span class="section-content-item-value" id="data-saved"
+              >0 Mo</span
+            >
+            <span class="section-content-item-name">Data Saved</span>
+          </div>
         </div>
       </div>
-      <div class="section ads">
+      <div class="section">
         <div class="section-title">
           <span class="section-name">Month Recap</span>
           <div class="section-divider"></div>
@@ -95,6 +105,18 @@
             >
             <span class="section-content-item-name">Unskippable Ads</span>
           </div>
+          <div class="section-content-item">
+            <img
+              class="section-content-item-icon"
+              src="../assets/images/blur-time.png"
+            />
+            <span
+              class="section-content-item-value"
+              id="blurred-time"
+              >0s</span
+            >
+            <span class="section-content-item-name">Blurred Time</span>
+          </div>
         </div>
       </div>
       <div class="section">
@@ -110,7 +132,7 @@
                 id="ads-skipper"
                 type="checkbox"
                 name="ads-skipper"
-                data-feature = "adsSkipper"
+                data-feature="adsSkipper"
               />
               <label class="bool-switch__label" for="ads-skipper"></label>
             </div>
@@ -125,7 +147,7 @@
                 id="resolution-blur"
                 type="checkbox"
                 name="resolution-blur"
-                data-feature = "resolutionBlur"
+                data-feature="resolutionBlur"
               />
               <label class="bool-switch__label" for="resolution-blur"></label>
             </div>
@@ -136,12 +158,6 @@
         </div>
       </div>
     </div>
-
-    <footer>
-      <span class="refresh-warning"
-        >Youtube tabs will be refresh on changes</span
-      >
-    </footer>
     <script src="../scripts/popup.js"></script>
   </body>
 </html>
