--- a/views/popup.html
+++ b/views/popup.html
@@ -12,7 +12,9 @@
     <header>
       <div id="logo">
         <img class="logo-image" src="../assets/images/logo.png" />
-        <span class="logo-name">YouTube<span class="logo-name-color" >Blue</span></span>
+        <span class="logo-name"
+          >YouTube<span class="logo-name-color">Blue</span></span
+        >
       </div>
 
       <div id="version">
@@ -70,9 +72,7 @@
               class="section-content-item-icon"
               src="../assets/images/data.png"
             />
-            <span class="section-content-item-value" id="data-saved"
-              >0 Mo</span
-            >
+            <span class="section-content-item-value" id="data-saved">0 Mo</span>
             <span class="section-content-item-name">Data Saved</span>
           </div>
         </div>
@@ -110,50 +110,8 @@
               class="section-content-item-icon"
               src="../assets/images/blur-time.png"
             />
-            <span
-              class="section-content-item-value"
-              id="blurred-time"
-              >0s</span
-            >
+            <span class="section-content-item-value" id="blurred-time">0s</span>
             <span class="section-content-item-name">Blurred Time</span>
-          </div>
-        </div>
-      </div>
-      <div class="section">
-        <div class="section-title">
-          <span class="section-name">Features</span>
-          <div class="section-divider"></div>
-        </div>
-        <div class="section-content">
-          <div class="section-content-action">
-            <div class="bool-switch-block">
-              <input
-                class="bool-switch__checkbox"
-                id="ads-skipper"
-                type="checkbox"
-                name="ads-skipper"
-                data-feature="adsSkipper"
-              />
-              <label class="bool-switch__label" for="ads-skipper"></label>
-            </div>
-            <label class="section-content-action-name" for="ads-skipper">
-              Ads Skipper</label
-            >
-          </div>
-          <div class="section-content-action">
-            <div class="bool-switch-block">
-              <input
-                class="bool-switch__checkbox"
-                id="resolution-blur"
-                type="checkbox"
-                name="resolution-blur"
-                data-feature="resolutionBlur"
-              />
-              <label class="bool-switch__label" for="resolution-blur"></label>
-            </div>
-            <label class="section-content-action-name" for="resolution-blur">
-              Resolution Blur</label
-            >
           </div>
         </div>
       </div>
