--- a/views/popup.html
+++ b/views/popup.html
@@ -13,7 +13,7 @@
       <div id="logo">
         <img class="logo-image" src="../assets/images/logo.png" />
         <span class="logo-name"
-          >YouTube<span class="logo-name-color">Blue</span></span
+          >YouTube<span class="logo-name-color">BLUE</span></span
         >
       </div>
 
