--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -1,5 +1,6 @@
-:root{
-    --item-value-color: #004971;
-    --item-text-color: #00A4FF;
-    --disabled-background: #D9D9D9
+:root {
+  --item-value-color: #004971;
+  --item-text-color: #0091ff;
+  --disabled-background: #d9d9d9;
+  --main-blue: #0091ff;
 }
