refacto database into classes

--- a/views/popup.html
+++ b/views/popup.html
@@ -110,8 +110,8 @@
               class="section-content-item-icon"
               src="../assets/images/blur-time.png"
             />
-            <span class="section-content-item-value" id="blurred-time">0s</span>
-            <span class="section-content-item-name">Blurred Time</span>
+            <span class="section-content-item-value" id="month-blur-time">0s</span>
+            <span class="section-content-item-name">Blur Time</span>
           </div>
         </div>
       </div>
