--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
   --item-value-color: #004971;
   --item-text-color: #0091ff;
-  --disabled-background: #d9d9d9;
+  --disabled-background: #D9D9D9;
   --main-blue: #0091ff;
+  --header-background: #F5F5F5
 }
