--- a/views/popup.html
+++ b/views/popup.html
@@ -141,11 +141,12 @@
         <span class="version-name" id="version-name">v1.2.3</span>
       </div>
       <div class="footer-item right">
-        <span class="author-name" id="author-name">Made by Mr-Fougere</span>
         <a
           class="version-link"
           href="https://github.com/Mr-Fougere/YoutubeBlue"
+          target="_blank"
         >
+          <span class="author-name" id="author-name">Made by Mr-Fougere</span>
           <img class="github-icon" src="../assets/images/github.png" />
         </a>
       </div>
