--- a/assets/styles/popup.css
+++ b/assets/styles/popup.css
@@ -64,6 +64,8 @@ header {
 a{
   text-decoration: none;
   color: inherit;
+  display: flex;
+  align-items: center;
 }
 
 #error-flash {
@@ -88,8 +90,9 @@ footer{
 }
 
 footer img{
-  width: 10;
-  height: 10;
+  margin-left: 2px;
+  width: 15;
+  height: 15;
 }
 
 .footer-item{
