--- a/views/popup.html
+++ b/views/popup.html
@@ -33,8 +33,9 @@
               <span class="section-content-item-name">Skipped Ads</span>
             </div>
             <div class="section-content-item-content">
+              <div class="section-content-item-loading"></div>
               <span class="section-content-item-value" id="total-skip-count"
-                >0</span
+                ></span
               >
             </div>
           </div>
@@ -47,8 +48,9 @@
               <span class="section-content-item-name">Data Saved</span>
             </div>
             <div class="section-content-item-content">
+              <div class="section-content-item-loading"></div>
               <span class="section-content-item-value" id="data-saved"
-                >0 Mo</span
+                ></span
               >
             </div>
           </div>
@@ -61,8 +63,9 @@
               <span class="section-content-item-name">Average ads time</span>
             </div>
             <div class="section-content-item-content">
+              <div class="section-content-item-loading"></div>
               <span class="section-content-item-value" id="average-ads-time"
-                >0s</span
+                ></span
               >
             </div>
           </div>
@@ -75,8 +78,9 @@
               <span class="section-content-item-name">Ads time</span>
             </div>
             <div class="section-content-item-content">
+              <div class="section-content-item-loading"></div>
               <span class="section-content-item-value" id="total-skip-time"
-                >0h 0m 0s</span
+                ></span
               >
             </div>
           </div>
@@ -95,10 +99,11 @@
               <span class="section-content-item-name">Skippable Ads</span>
             </div>
             <div class="section-content-item-content">
+              <div class="section-content-item-loading"></div>
               <span
                 class="section-content-item-value"
                 id="month-skippable-count"
-                >0</span
+                ></span
               >
             </div>
           </div>
@@ -111,10 +116,11 @@
               <span class="section-content-item-name">Unskippable Ads</span>
             </div>
             <div class="section-content-item-content">
+              <div class="section-content-item-loading"></div>
               <span
                 class="section-content-item-value"
                 id="month-unskippable-count"
-                >0</span
+                ></span
               >
             </div>
           </div>
@@ -127,8 +133,9 @@
               <span class="section-content-item-name">Blur Time</span>
             </div>
             <div class="section-content-item-content">
+              <div class="section-content-item-loading"></div>
               <span class="section-content-item-value" id="month-blur-time"
-                >0h 0m 0s</span
+                ></span
               >
             </div>
           </div>
