--- a/views/popup.html
+++ b/views/popup.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div id="logo">
-        <img class="logo-image" src="../assets/images/logo.png" />
+        <img class="logo-image" src="../assets/icons/logo128.png" />
         <span class="logo-name"
           >YouTube<span class="logo-name-color">BLUE</span></span
         >
